--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL = "http://localhost:2000/api/v1"
+REACT_APP_API_BASE_URL = "https://token-validator-api.herokuapp.com/api/v1"
 GENERATE_SOURCEMAP=false
